
source_file  = files('lottieparser.cpp')
source_file += files('lottieloader.cpp')
source_file += files('lottiemodel.cpp')
source_file += files('lottieproxymodel.cpp')
source_file += files('lottieanimation.cpp')
source_file += files('lottieitem.cpp')


lottie_dep = declare_dependency(
                                  include_directories : include_directories('.'),
                                  sources : source_file
                               )
