
source_file = [
    'v_ft_math.cpp',
    'v_ft_raster.cpp',
    'v_ft_stroker.cpp',
    ]

freetype_dep = declare_dependency(
                                    include_directories : include_directories('.'),
                                    sources : source_file
                                 )
